--- a/pages/login.html
+++ b/pages/login.html
@@ -10,13 +10,13 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   
-  <!-- Enlace al CSS externo -->
+  <!-- CSS externo -->
   <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
   <div id="root"></div>
 
-  <!-- Enlace al JS que contiene el componente React -->
-  <script type="text/babel" src="/js/login.js"></script>
+  <!-- JS que contiene el componente React -->
+  <script type="text/babel" src="/Js/login.js"></script>
 </body>
 </html>
